@@ -1,3 +1,4 @@
+21. Mai. 2012 - amo -  add missing source and target ID when throw exception if component was not found
 20. Mai. 2012 - amo -  Add support for FXML components, add FXMLReplace worker due to differences with FXComponents
 10. Apr. 2012 - amo -  OnStart annotation on Perspective level implemented... TODO: implement on Teardown in FXWorkbenchHandler !!
 10. Apr. 2012 - amo -  OnStart and OnTeardown annotations for Components implemented AFXComponent do not extend IEXtended component anymore (no need to implement onStart/OnTeardown) instead annotate methods 
